@@ -10,6 +10,7 @@
 
 
 Version 4.1.5
+ - Fixed: [ 1952073 ] SVN 2918 - STATS, bad SURN numbers (fisharebest)
  - Added: Standardised interface to CMS applications such as joomla, drupal, postnuke, etc. (fisharebest)
  - Fixed: [ 1951591 ] Error in Hebrew Date Editing (fisharebest)
  - Fixed: [ 1951335 ] Privacy Warning on View GEDCOM for Media Even for Admin (fisharebest)
